[BZ #2268]

2006-02-03  Roland McGrath  <roland@redhat.com>
	[BZ #2268]
	* sysdeps/posix/profil.c (__profil): Use __profile_frequency to choose
	timer interval, don't assume smallest possible interval is it.

	* sysdeps/powerpc/fpu/bits/fenvinline.h (fegetround): Make asm
	volatile.